@@ -3,4 +3,4 @@ release = 1
 packager = Armijn Hemel <armijn@binaryanalysis.org>
 group = Development/Tools
 doc_files = LICENSE ChangeLog
-requires = python-magic, binutils, e2fsprogs, e2tools, squashfs-tools, fuse, coreutils, module-init-tools, gzip, xz, xz-lzma-compat, zip, unzip, unrar, cabextract, unshield, p7zip, p7zip-plugins, cpio, tar, bzip2, mtd-utils, mtd-utils-ubi, lzip, lzop, fuseiso, arj, giflib-utils, gd-progs, icoutils, rpm, rpm-python, gettext, PyXML, bat-extratools >= 12.1, bat-extratools-java >= 11.0, gcc-java, java, upx, poppler-utils, netpbm-progs, libxml2, lrzip, ncompress, python-imaging, vorbis-tools, eot-utils, libmp4v2, wxPython, ctags, python-matplotlib, file
+requires = python-magic, binutils, e2fsprogs, e2tools, squashfs-tools, fuse, coreutils, module-init-tools, gzip, xz, xz-lzma-compat, zip, unzip, unrar, cabextract, unshield, p7zip, p7zip-plugins, cpio, tar, bzip2, mtd-utils, mtd-utils-ubi, lzip, lzop, fuseiso, arj, giflib-utils, gd-progs, icoutils, rpm, rpm-python, gettext, bat-extratools >= 12.1, bat-extratools-java >= 11.0, gcc-java, java, upx, poppler-utils, netpbm-progs, libxml2, lrzip, ncompress, python-imaging, vorbis-tools, eot-utils, libmp4v2, wxPython, ctags, python-matplotlib, file
