@@ -1,3 +1,6 @@
+2013-02-19
+* remove dependency on PyXML
+
 2013-02-18
 * prevent adding duplicates to report tarball
 * merge generatenameshtml.py and generateuniquehtml.py
